--- a/MainApplication/StockPage.form
+++ b/MainApplication/StockPage.form
@@ -29,7 +29,7 @@
           </component>
         </children>
       </scrollpane>
-      <component id="589e4" class="javax.swing.JButton" binding="JBtoevoegenProduct" custom-create="true">
+      <component id="589e4" class="javax.swing.JButton" binding="JBtoevoegenProduct">
         <constraints>
           <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
