--- a/MainApplication/CustomerPage.form
+++ b/MainApplication/CustomerPage.form
@@ -29,9 +29,18 @@
           </component>
         </children>
       </scrollpane>
-      <hspacer id="6e5f1">
+      <component id="eea50" class="javax.swing.JButton" binding="JBtoevoegenKlant">
         <constraints>
-          <grid row="0" column="1" row-span="1" col-span="2" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <foreground color="-16759365"/>
+          <text value="Toevoegen Klant"/>
+        </properties>
+      </component>
+      <hspacer id="1ad57">
+        <constraints>
+          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
       </hspacer>
     </children>
